# L1-web-application

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: app.py  celery_app.py
app/assets/: app.css
app/components/: SensorCard.py  TemperatureCard.py  ToastyButton.py  UserConfig.py  builders.py  dropdown_builder.py  flex_builder.py  footer.py  header.py  navbar.py  theme_toggle.py
app/components/aio/: thermostat_card.py
app/components/shell/: footer.py  header.py  theme_toggle.py
app/database/: db_methods.py  db_orm.py  lab1.db
app/database/sqlite/: lab1.db
app/db_conn/: Lab1.db  db_methods.py  db_models.py
app/pages/: analytics.py  configuration.py  dashboard.py  home.py  live.py  settings.py
app/utils/: conversions.py  process_stream.py  temperature_chart.py  temperature_utils.py
app/visuals/: StatCard.py  temperature_chart.py
src/: app.py
src/components/: new_user_form.py  update_user_form.py  user_form.py
src/components/aio/: thermostat_card.py
src/components/shell/: footer.py  header.py  theme_toggle.py
src/database/: db_methods.py  db_orm.py
src/pages/: analytics.py  live.py  settings.py
src/utils/: process_stream.py
src/visuals/: temperature_chart.py
tests/: stream_test.py
