[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-core-components>=2.0.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.2.1",
    "pandas>=2.3.2",
    "plotly-express>=0.4.1",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
